stylesheets/styles.css
/* ... */
@media print, screen and (max-width: 720px) {
  body {
    word-wrap: break-word;
  }

  header {
    padding: 20px 20px;
    margin: 0;
  }
  header .sidebar-button {
    margin-left: 5px;
  }
  header h1 {
    font-size: 32px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    -ms-text-overflow: ellipsis;
  }
  header p {
    display: none;
  }

  #banner {
    top: 80px;
  }

  section {
    margin-top: 130px;
    margin-bottom: 0px;
    width: auto;
  }

  header ul, header p.view {
    position: static;
  }
}
@media print, screen and (max-width: 480px) {
  header {
    position: relative;
    padding: 5px 0px;
    min-height: 0px;
  }
  header .sidebar-button {
    margin-left: 20px;
  }
  header h1 {
    font-size: 24px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    -ms-text-overflow: ellipsis;
  }

  section {
    margin-top: 5px;
  }

  #banner {
    display: none;
  }

  header ul {
    display: none;
  }
}
@media print {
  body {
    padding: 0.4in;
    font-size: 12pt;
    color: #444;
  }
}

/* latest news bar */

#latest-news-bar {
  display: none;
}

@media screen and (min-width: 1024px) {
  #latest-news-bar {
    display: block;
    position: absolute;
    top: 220px;
    left: 880px;
    right: 25px;
    max-width: 256px;
  }
}

#latest-news-bar h1 {
  font-size: 100%;
}

#latest-news-bar .news-item {
  display: block;
  color: inherit;
  border-top: 10px solid #4276B6;
  margin: 0px;
  padding: 0px;
  position: relative;
}

#latest-news-bar img.cover {
  display: block;
  width: 100%;
  margin: 0px;
  padding: 0px;
}

#latest-news-bar .news-item p.title {
  font-size: 120%;
  margin-top: 5px;
  margin-bottom: 5px;
}

#latest-news-bar .news-item p.date {
  font-size: 80%;
  margin-top: 5px;
  margin-bottom: 5px;
}

#latest-news-bar .news-item {
  filter: grayscale(100%) opacity(50%);
  transition : filter 500ms linear;
  -webkit-filter: grayscale(100%) opacity(50%);
  -webkit-transition : -webkit-filter 500ms linear;
}

#latest-news-bar .news-item:hover {
  filter: none;
  transition : filter 100ms linear;
  -webkit-filter: none;
  -webkit-transition : -webkit-filter 100ms linear;
}

/* posts */

.post {
  margin-top: 2em;
  margin-bottom: 2em;
}

.post > .body {
  margin-left: 10px;
  padding-left: 20px;
  border-left: 1px solid #ffcc00;
}

.post.collapsed > .body {
  display: none;
}

.post > .header {
  cursor: pointer;
  margin-bottom: 1em;
  margin-left: 31px;
  font-size: 16pt;
}

.post > .header .buttons {
  float: left;
  margin-left: -31px;
  display: inline-block;
  width: 21px;
  text-align: center;
  color: #ffcc00;
}

.post > .header .button-collapse, .post.collapsed > .header .button-expand {
  display: none;
}

.post.collapsed > .header .button-collapse, .post > .header .button-expand {
  display: block;
}

.post > .header .date, .post > .header .discontinued {
  color: #bbb;
  font-size: 10pt;
  margin-right: 1em;
}

.post > .header .link {
  visibility: hidden;
  font-size: 10pt;
  margin-left: 1em;
}
.post > .header:hover .link {
  visibility: visible;
}

.post-date {
  color: #bbb;
  font-size: 10pt;
  margin-bottom: 1em;
}

img.post-cover {
  float: left;
  width: 50%;
  width: calc(50% - 12.5px);
  margin: 0px 25px 25px 0px;
  padding: 0px;
}

@media print, screen and (max-width: 480px) {
  img.post-cover {
    display: block;
    width: 100%;
    float: inherit;
    margin-left: 0px;
  }
}

.media-attachments {
  text-align: center;
}

.post > .body > .media-attachments div {
  display: inline-block;
  white-space: nowrap;
  overflow-x: auto;
  width: 100%;
  margin: 0px;
  padding: 0px;
}

.media-attachments img {
  display: inline-block;
  margin: 4px;
  padding: 0px;
  -moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
  -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
  -o-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
  cursor: pointer;
  height: 128px;
}

.post > .body > .media-attachments img {
  margin-right: 0px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 8px;
}

.post > .body > .media-attachments img:first-child {
  margin-left: 0px;
}

/* board */

.board-member {
  margin-top: 40px;
  margin-bottom: 40px;
}

.board-member > div.summary {
  float: left;
  width: 128px;
  border-right: 1px solid #ffcc00;
  margin-right: 20px;
  padding-right: 20px;
  margin-bottom: 10px;
  font-style: italic;
}

.board-member > div.summary p {
  margin-top: 0px;
  margin-bottom: 0px;
}

.board-member > div.clear {
  clear: both;
}

/* theatre */

/* Using centering trick from
 *   http://css-tricks.com/centering-in-the-unknown
 */

.theatre {
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  padding: 0px;
  margin: 0px;
  background: rgba(0,0,0,0.75);
  z-index: 100;
}

.theatre .body {
  padding: 0px;
  margin: 0px;
}

.theatre .content-container {
  position: absolute;
  left: 50px;
  right: 50px;
  top: 50px;
  bottom: 50px;
  padding: 0px;
  margin: 0px;
  text-align: center;
}

.theatre .content-container:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.theatre .content-container .content {
  display: inline-block;
  vertical-align: middle;
  max-width: 100%;
  max-height: 100%;
  -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
  -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
  -o-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
}

.theatre .left-pane, .theatre .right-pane,
.theatre .left-pane .button, .theatre .right-pane .button {
  position: absolute;
  top: 0px;
  bottom: 0px;
  cursor: pointer;
}

.theatre .left-pane {
  left: 0px;
  right: 50%;
}

.theatre .right-pane {
  left: 50%;
  right: 0px;
}

.theatre .left-pane .button {
  left: 0px;
}

.theatre .right-pane .button {
  right: 0px;
}
/* ... */

